imagenes nuevas para "información al paciente"

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,7 +3,7 @@
 
     <string-array name="titulos_informacion">
         <item>¿Porque donar?</item>
-        <item>¿He de ir en ayunas?</item>
+        <item>¿Tengo que ir en ayunas?</item>
         <item>¿Cuanto dura la donación?</item>
         <item>¿Existe algún rieso?</item>
         <item>¿Puedo donar bajo medicación?</item>
