--- a/app/src/main/res/drawable/button_effect_drawable.xml
+++ b/app/src/main/res/drawable/button_effect_drawable.xml
@@ -4,13 +4,13 @@
 
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/rojo" />
+            <solid android:color="#99dddddd" />
         </shape>
     </item>
 
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#f44" />
+            <solid android:color="#99000000" />
         </shape>
     </item>
 
