--- a/app/src/main/res/layout/activity_first_config.xml
+++ b/app/src/main/res/layout/activity_first_config.xml
@@ -6,18 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <android.support.v4.view.ViewPager
         android:id="@+id/first_config_viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <com.viewpagerindicator.CirclePageIndicator
-        android:id="@+id/first_config_viewpager_indicator"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent" />
-
     <com.ntilde.percentagelayout.PLinearLayout
+        android:id="@+id/first_config_buttons_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:orientation="horizontal"
@@ -44,6 +39,25 @@
             android:background="@drawable/button_effect_drawable"
             android:text="Siguiente"
             android:textColor="#fff"/>
+
+    </com.ntilde.percentagelayout.PLinearLayout>
+
+    <com.ntilde.percentagelayout.PLinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:layout_above="@id/first_config_buttons_container"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        app:pl_percentage_width="100"
+        app:pl_percentage_height="7"
+        app:pl_percentage_padding="5">
+
+        <com.viewpagerindicator.CirclePageIndicator
+            android:id="@+id/first_config_viewpager_indicator"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:layout_width="match_parent"/>
 
     </com.ntilde.percentagelayout.PLinearLayout>
 
