--- a/app/src/main/res/layout/first_config_step3.xml
+++ b/app/src/main/res/layout/first_config_step3.xml
@@ -1,18 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:id="@+id/content"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/background"
+        android:id="@+id/first_config_step3_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@null"
-        android:scaleType="centerCrop"
-        android:src="@drawable/donantes"/>
+        android:scaleType="centerCrop"/>
+
+    <com.ntilde.percentagelayout.PLinearLayout
+        android:id="@+id/first_config_step3_bottom_space"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        app:pl_percentage_width="100"
+        app:pl_percentage_height="10"
+        android:orientation="vertical"/>
+
+    <com.ntilde.percentagelayout.PLinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@id/first_config_step3_bottom_space"
+        app:pl_percentage_width="100"
+        app:pl_percentage_height="30"
+        android:background="#dd000000"
+        android:orientation="vertical">
+
+        <com.ntilde.percentagelayout.PTextView
+            android:id="@+id/first_config_step3_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            app:ptv_height="2.8"
+            android:text="Número de donante y notificaciones"
+            android:textStyle="bold"
+            android:paddingTop="16dp"
+            android:paddingRight="16dp"
+            android:textColor="#fff"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="16dp"
+            android:paddingRight="16dp"
+            android:paddingLeft="16dp"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/first_config_step3_num_donante"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="Núm. de donante"
+                android:layout_weight="7"
+                android:textColor="@android:color/white"
+                style="@style/EditTextDonantes"/>
+
+            <ImageView
+                android:id="@+id/first_config_step3_notifications"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_marginLeft="10dp"
+                android:layout_gravity="center_vertical"
+                android:tag="false"
+                android:src="@drawable/ic_notifications_off_white_24dp"/>
+
+        </LinearLayout>
+
+    </com.ntilde.percentagelayout.PLinearLayout>
 
 </RelativeLayout>
