--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,6 +15,10 @@
 
     </style>
 
+    <style name="EditTextDonantes">
+        <item name="android:background">@drawable/apptheme_textfield_activated_holo_dark</item>
+    </style>
+
     <!--ViewPagerIndicator-->
     <declare-styleable name="CircleView">
         <attr name="cv_color" format="color" />
